examples/keepalived-haproxy-vrrp.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: vrrp-haproxy
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: vrrp-haproxy
  template:
    metadata:
      labels:
        app: vrrp-haproxy
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: keepalived
          image: osixia/keepalived:2.0.20
          securityContext:
            capabilities:
              add: ["NET_ADMIN", "NET_BROADCAST", "NET_RAW"]
          volumeMounts:
            - name: keepalived-config
              mountPath: /container/service/keepalived/assets/keepalived.conf
              subPath: keepalived.conf
        - name: haproxy
          image: haproxy:2.9
          args: ["-f", "/usr/local/etc/haproxy/haproxy.cfg"]
          ports:
            - containerPort: 443
              hostPort: 443
              protocol: TCP
          volumeMounts:
            - name: haproxy-config
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
      volumes:
        - name: keepalived-config
          configMap:
            name: keepalived-config
        - name: haproxy-config
          configMap:
            name: haproxy-config
