examples/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: private-tcp-app
  namespace: default
spec:
  type: LoadBalancer
  loadBalancerClass: tcp-lb.l3.nu/cloudflared
  selector:
    app: private-tcp-app
  ports:
    - name: tcp
      port: 443
      targetPort: 8443
      protocol: TCP
