examples/minio-lb-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-hl
  namespace: default
spec:
  clusterIP: None
  selector:
    app: minio-test
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-test
  namespace: default
  labels:
    app: minio-test
spec:
  serviceName: minio-hl
  replicas: 3
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: minio-test
  template:
    metadata:
      labels:
        app: minio-test
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - minio-test
              topologyKey: kubernetes.io/hostname
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          args:
            - server
            - http://minio-test-{0...2}.minio-hl.default.svc.cluster.local/data
            - --console-address
            - :9001
          ports:
            - name: api
              containerPort: 9000
            - name: console
              containerPort: 9001
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: minio-api
  namespace: default
spec:
  type: LoadBalancer
  loadBalancerClass: tcp-lb.l3.nu/cloudflared
  selector:
    app: minio-test
  ports:
    - name: api
      protocol: TCP
      port: 443
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: default
spec:
  type: LoadBalancer
  loadBalancerClass: tcp-lb.l3.nu/cloudflared
  selector:
    app: minio-test
  ports:
    - name: console
      protocol: TCP
      port: 8443
      targetPort: 9001
