examples/nginx-lb-test-no-lb-class.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-no-class
  namespace: default
  labels:
    app: nginx-no-class
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-no-class
  template:
    metadata:
      labels:
        app: nginx-no-class
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-no-class
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: nginx-no-class
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
