examples/nginx-ingress-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-ingress
  namespace: default
  labels:
    app: my-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-ingress
  template:
    metadata:
      labels:
        app: my-ingress
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: my-ingress
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: my-ingress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: app1.l3.nu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-ingress
                port:
                  number: 80
    - host: app2.l3.nu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-ingress
                port:
                  number: 80
    - host: app3.l3.nu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-ingress
                port:
                  number: 80
